Add discovery mode: verbose endpoint logging and JSON dump support
Adds opt-in verbose logging that logs response shapes for all GraphQL
endpoints and can dump full JSON responses to disk for reverse engineering.
Controllable via popup toggle and chrome.storage.local config keys
(verboseDumpEndpoint, verboseDumpIds). Dump support added to both HTTP
daemon and native host transports.

--- a/popup.html
+++ b/popup.html
@@ -29,6 +29,10 @@
         <input type="checkbox" id="debug-toggle">
         <span class="toggle-label">Debug logging to file</span>
       </label>
+      <label class="toggle-row">
+        <input type="checkbox" id="verbose-toggle">
+        <span class="toggle-label">Discovery mode (verbose endpoint logging)</span>
+      </label>
     </div>
   </div>
   <script src="popup.js"></script>
