Prefer daemon bootstrap token and add HTTP control UI

--- a/popup.html
+++ b/popup.html
@@ -43,6 +43,11 @@
         <input type="checkbox" id="verbose-toggle">
         <span class="toggle-label">Discovery mode (verbose endpoint logging)</span>
       </label>
+      <label class="toggle-row">
+        <input type="checkbox" id="native-fallback-toggle">
+        <span class="toggle-label">Allow native fallback when HTTP is down</span>
+      </label>
+      <button id="retry-http" class="retry-btn">Retry HTTP now</button>
     </div>
   </div>
   <script src="popup.js"></script>
